--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_spinkit: ^5.2.2
   curved_navigation_bar: ^1.0.6
   flutter:
     sdk: flutter
@@ -73,6 +74,7 @@ flutter:
      - assets/star.png
      - assets/user.png
      - assets/gif/
+     - assets/images/recipe.jpg
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
